--- a/src/app/protfilos/protfilos.component.html
+++ b/src/app/protfilos/protfilos.component.html
@@ -1,66 +1,22 @@
 <h2>protfilos</h2>
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-  <div class="card" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
+    <div class="col-md-4 "  *ngFor="let card of arr;let i =index">
+
+      <div class="card" style="width: 15rem;height: 10rem;">
+
+    <div class="card-body" [ngClass]="i % 2==0 ?'bg-danger':'bg-warning'">
+    <h2 class="card-subtitle mb-2 text-light text-center mt-5">{{card}}</h2>
 <h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-     <div class="col-md-4">
-  <div class="card" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
-<h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-     <div class="col-md-4">
-  <div class="card mt" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
-<h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-     <div class="col-md-4">
-  <div class="card mt-5" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
-<h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-     <div class="col-md-4">
-  <div class="card mt-5" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
-<h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-     <div class="col-md-4">
-  <div class="card mt-5" style="width: 15rem;height: 10rem;">
-  <div class="card-body bg-warning ">
-    <h2 class="card-subtitle mb-2 text-light text-center mt-5">web design</h2>
-<h3></h3>
-  </div>
-
-      </div>
-
-    </div>
-
   </div>
 </div>
+      </div>
+
+    </div>
+
+
+
+
+
+  </div>
+
